@@ -1,3 +1,8 @@
+2011-04-22 belangeo <belangeo@gmail.com>
+
+    * Added new object : PitchShift, frequency shifter using single sideband amplitude modulation.
+    - rev 605
+
 2011-04-15 belangeo <belangeo@gmail.com>
 
     * Added new object : Denorm.
